[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/levels/map/GameOverLevel.gd" type="Script" id=2]
[ext_resource path="res://scenes/levels/tilemaps/HubTilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/items.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.2583, 34.9984 )

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Failure:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.450625, 0.466517, 0.435275 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.4 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Failure:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Success:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.682353, 0.627451, 0.027451, 1 ), Color( 0.32549, 0.682353, 0.027451, 1 ), Color( 0.682353, 0.627451, 0.027451, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Success:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Success:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}

[node name="GameOverLevel" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Start" parent="." index="1"]
position = Vector2( 547.07, -636.396 )

[node name="Player" parent="." index="2"]
position = Vector2( 456.274, -739.35 )

[node name="Position2D" type="Position2D" parent="Player" index="9"]
position = Vector2( 313.955, -8 )

[node name="Podium" type="Sprite" parent="." index="3"]
position = Vector2( 496.778, -48.6208 )
scale = Vector2( 1.20099, 1.18847 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 2, 4, 112, 62 )

[node name="StaticBody2D" type="StaticBody2D" parent="Podium" index="0"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Podium/StaticBody2D" index="0"]
position = Vector2( 0.348907, 9.03322 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Podium/StaticBody2D" index="1"]
position = Vector2( -33.8449, 34.3262 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Podium/StaticBody2D" index="2"]
position = Vector2( 32.7981, 25.7447 )
shape = SubResource( 1 )

[node name="Podium1" type="Position2D" parent="Podium" index="1"]
position = Vector2( 0, -546.405 )

[node name="Podium2" type="Position2D" parent="Podium" index="2"]
position = Vector2( 32.7981, -546.405 )

[node name="Podium3" type="Position2D" parent="Podium" index="3"]
position = Vector2( -33.8449, -546.405 )

[node name="Podium4" type="Position2D" parent="Podium" index="4"]
position = Vector2( 163.094, -546.405 )

[node name="HubTilemap" parent="." index="4" instance=ExtResource( 3 )]

[node name="Camera2D" parent="." index="5"]
position = Vector2( 803.07, -591.991 )

[node name="Infos" type="VBoxContainer" parent="CanvasLayer" index="2"]
margin_left = 532.0
margin_top = 305.0
margin_right = 962.0
margin_bottom = 476.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="CanvasLayer/Infos" index="0"]
margin_right = 430.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
align = 1

[node name="Money" type="Label" parent="CanvasLayer/Infos" index="1"]
margin_top = 52.0
margin_right = 430.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 48 )
align = 1

[node name="Continue" type="Button" parent="CanvasLayer/Infos" index="2"]
margin_left = 173.0
margin_top = 104.0
margin_right = 256.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 4
text = "continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]
anims/failure = SubResource( 2 )
anims/success = SubResource( 3 )

[node name="Success" type="Sprite" parent="." index="8"]
modulate = Color( 0.682353, 0.627451, 0.027451, 1 )
position = Vector2( 1036.2, -300 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 144, -1, 294, 66.9828 )

[node name="Failure" type="Sprite" parent="." index="9"]
modulate = Color( 0.701961, 0.172549, 0.0705882, 1 )
position = Vector2( 1036.2, -300 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 142.341, 65.1571, 259.373, 65.5315 )

[connection signal="fadein_end" from="." to="." method="_on_GameOverLevel_fadein_end"]
[connection signal="pressed" from="CanvasLayer/Infos/Continue" to="." method="_on_Continue_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
